projekt strony responsywnej

--- a/index.html
+++ b/index.html
@@ -1,11 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/0bcf8cddb9.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="images/favicon.svg" />
+    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png" />
+    <meta name="apple-mobile-web-app-title" content="Programmers Space Program" />
+    <link rel="manifest" href="images/site.webmanifest" />
 </head>
+
 <body>
-    
+    <div class="stars"></div>
+    <header>
+        <h1>
+            <img src="images/apple-touch-icon.png" alt="Programmers Space Program Logo">
+            Programmers Space Program
+        </h1>
+        <nav>
+            <ul>
+                <li><a href="index.html"><i class="fa-solid fa-moon"></i> Strona główna</a></li>
+                <li></i> <a href="About_Space_Program.html"><i class="fa-solid fa-user-astronaut"></i> Program lotów</a></li>
+                <li><a href="Space_images.html"><i class="fa-solid fa-money-bill"></i> Zdjęcia kosmosu</a></li>
+                <li></i><a href="Contact.html"><i class="fa-solid fa-satellite-dish"></i> Kontakt</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Odkrywaj Wszechświat</h2>
+            <p>Wybierz się w niezwykłą podróż przez kosmos i doświadcz cudów podróży kosmicznych. Poznaj zaawansowaną technologię, innowacje oraz pasję, które stoją za Polskim Programem Kosmicznym. Przemierzaj bezkresną przestrzeń, odkrywając nieznane światy i poznając tajemnice wszechświata. Dowiedz się, jak polscy inżynierowie i naukowcy zmieniają oblicze eksploracji kosmosu, łącząc pasję, wiedzę i nowoczesne technologie, by przesuwać granice tego, co możliwe. Dołącz do tej fascynującej misji i stań się częścią przełomowego etapu w historii polskiej i światowej astronautyki.</p>
+        </section>
+
+        <section class="image-section">
+            <h2>Zadowoleni klienci</h2>
+            <p>Astronauci-programiści wylecieli na Księżyc, aby w spokoju realizować swoje projekty i pisać kod z dala od ziemskich zakłóceń. Cieszą się pełną swobodą pracy w unikalnym środowisku, które zapewnia im Program Kosmiczny Programistów (Programmers Space Program). Dzięki temu mogą skupić się na swoich zadaniach, wykorzystując ciszę i izolację Księżyca, by w pełni rozwijać swoje pomysły w nowym, inspirującym miejscu. Zadowoleni z tej niecodziennej okazji, programują w najlepszych warunkach, jakie można sobie wyobrazić.</p>
+            <div class="flex-div ">
+            <img src="images/images_index/pexels-pixabay-39896.jpg">
+            <img src="images/images_index/pexels-pixabay-41162.jpg">
+            <img src="images/images_index/pexels-rdne-8474996.jpg">
+            </div>
+        </section>
+
+        <section>
+            <h2>Zarezerwuj swoją Kosmiczną Przygodę </h2>
+            <p>Gotowy, by spełnić swoje marzenia? <a href="Buy_a_Space_Flight.html">Kup bilet</a> na podróż w kosmos i stań się pionierem w odkrywaniu innych światów! Przeżyj niezapomnianą przygodę, wyruszając na pokładzie najnowocześniejszych statków kosmicznych, które zabiorą Cię w przestrzeń poza Ziemią. Otwórz drzwi do nieskończonych możliwości, odkrywaj tajemnice wszechświata i doświadczaj tego, czego nie zaznasz na żadnej innej podróży. Zrób krok w stronę przyszłości i stań się częścią rewolucji w eksploracji kosmosu. To Twoja szansa na wzięcie udziału w historii, która zmienia bieg ludzkości!</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2023 Programmers Space Program. All Rights Reserved.</p>
+    </footer>
+    <script src="js/javascript.js"></script>
 </body>
+
 </html>
