--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
             <img src="images/images_index/pexels-rdne-8474996.jpg">
             </div>
         </section>
-
+        
         <section>
             <h2>Zarezerwuj swoją Kosmiczną Przygodę </h2>
-            <p>Gotowy, by spełnić swoje marzenia? <a href="Buy_a_Space_Flight.html">Kup bilet</a> na podróż w kosmos i stań się pionierem w odkrywaniu innych światów! Przeżyj niezapomnianą przygodę, wyruszając na pokładzie najnowocześniejszych statków kosmicznych, które zabiorą Cię w przestrzeń poza Ziemią. Otwórz drzwi do nieskończonych możliwości, odkrywaj tajemnice wszechświata i doświadczaj tego, czego nie zaznasz na żadnej innej podróży. Zrób krok w stronę przyszłości i stań się częścią rewolucji w eksploracji kosmosu. To Twoja szansa na wzięcie udziału w historii, która zmienia bieg ludzkości!</p>
+            <p>Gotowy, by spełnić swoje marzenia? <a href="Contact.html">Zapytaj o bilet</a> na podróż w kosmos i stań się pionierem w odkrywaniu innych światów! Przeżyj niezapomnianą przygodę, wyruszając na pokładzie najnowocześniejszych statków kosmicznych, które zabiorą Cię w przestrzeń poza Ziemią. Otwórz drzwi do nieskończonych możliwości, odkrywaj tajemnice wszechświata i doświadczaj tego, czego nie zaznasz na żadnej innej podróży. Zrób krok w stronę przyszłości i stań się częścią rewolucji w eksploracji kosmosu. To Twoja szansa na wzięcie udziału w historii, która zmienia bieg ludzkości!</p>
         </section>
     </main>
     <footer>
