--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Programers Space Program</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/0bcf8cddb9.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
@@ -34,7 +34,7 @@
     <main>
         <section>
             <h2>Odkrywaj Wszechświat</h2>
-            <p>Wybierz się w niezwykłą podróż przez kosmos i doświadcz cudów podróży kosmicznych. Poznaj zaawansowaną technologię, innowacje oraz pasję, które stoją za Polskim Programem Kosmicznym. Przemierzaj bezkresną przestrzeń, odkrywając nieznane światy i poznając tajemnice wszechświata. Dowiedz się, jak polscy inżynierowie i naukowcy zmieniają oblicze eksploracji kosmosu, łącząc pasję, wiedzę i nowoczesne technologie, by przesuwać granice tego, co możliwe. Dołącz do tej fascynującej misji i stań się częścią przełomowego etapu w historii polskiej i światowej astronautyki.</p>
+            <p>Wybierz się w niezwykłą podróż przez kosmos i doświadcz cudów podróży kosmicznych. Poznaj zaawansowaną technologię, innowacje oraz pasję, które stoją za naszym programem kosmicznym. Przemierzaj bezkresną przestrzeń, odkrywając nieznane światy i poznając tajemnice wszechświata. Dowiedz się, jak inżynierowie i naukowcy zmieniają oblicze eksploracji kosmosu, łącząc pasję, wiedzę i nowoczesne technologie, by przesuwać granice tego, co możliwe. Dołącz do tej fascynującej misji i stań się częścią przełomowego etapu w historii światowej astronautyki.</p>
         </section>
 
         <section class="image-section">
@@ -48,7 +48,7 @@
         </section>
         
         <section>
-            <h2>Zarezerwuj swoją Kosmiczną Przygodę </h2>
+            <h2>Zarezerwuj swoją Kosmiczną Przygodę i pracuj nad kodem w spokoju </h2>
             <p>Gotowy, by spełnić swoje marzenia? <a href="Contact.html">Zapytaj o bilet</a> na podróż w kosmos i stań się pionierem w odkrywaniu innych światów! Przeżyj niezapomnianą przygodę, wyruszając na pokładzie najnowocześniejszych statków kosmicznych, które zabiorą Cię w przestrzeń poza Ziemią. Otwórz drzwi do nieskończonych możliwości, odkrywaj tajemnice wszechświata i doświadczaj tego, czego nie zaznasz na żadnej innej podróży. Zrób krok w stronę przyszłości i stań się częścią rewolucji w eksploracji kosmosu. To Twoja szansa na wzięcie udziału w historii, która zmienia bieg ludzkości!</p>
         </section>
     </main>
