--- a/Space_images.html
+++ b/Space_images.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+    <title>Photos</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/0bcf8cddb9.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" href="images/favicon-96x96.png" sizes="96x96" />
